--- a/ManageAzureDemo/ManageAzureDev1/packages.config
+++ b/ManageAzureDemo/ManageAzureDev1/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net46" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.9" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
   <package id="RestSharp" version="105.2.2" targetFramework="net46" />
